--- a/JetBrains2021TestDiffDll.fsproj
+++ b/JetBrains2021TestDiffDll.fsproj
@@ -6,7 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs"/>
+        <Compile Include="Program.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Mono.Cecil" Version="0.11.3" />
     </ItemGroup>
 
 </Project>
